force-app/main/default/objects/Category__c/fields/Expense_Item__c.field-meta.xml
<CustomField>
    <fullName>Expense_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Expense Item</label>
    <referenceTo>Expense_Item__c</referenceTo>
    <relationshipLabel>Expense Categories</relationshipLabel>
    <relationshipName>Expense_Categories</relationshipName>
    <type>Lookup</type>
</CustomField>