force-app/main/default/objects/Category__c/fields/Reimbursable_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Reimbursable_Percentage__c</fullName>
    <description>Formula</description>
    <label>Reimbursable Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>